# refsync

./: .gitignore  LICENSE  README.md  library.db  migrate_citations.py  pyproject.toml  requirements.txt  settings.json
backend/: config.py  main.py  models.py
backend/db/: __init__.py  base.py  sqlite.py
backend/routers/: __init__.py  papers.py  shelves.py  tags.py
backend/services/: __init__.py  ads.py  arxiv.py  bibtex.py  latex.py  settings_service.py
frontend/templates/: base.html  index.html  library.html  paper.html
src/refsync/: cli.py  config.py  main.py  models.py
src/refsync/db/: __init__.py  base.py  sqlite.py
src/refsync/frontend/templates/: base.html  index.html  library.html  paper.html  settings.html
src/refsync/routers/: __init__.py  papers.py  settings.py  shelves.py  tags.py
src/refsync/services/: arxiv.py  pdf.py  settings_service.py
