[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refsync"
version = "0.1.0"
description = "A citation manager for astronomers with ADS sync"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Imad Pasha", email = "imad.pasha@yale.edu"}
]
keywords = [
    "astronomy",
    "citations",
    "bibliography",
    "arxiv",
    "ADS",
    "reference manager"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "aiosqlite",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "feedparser",
    "pylatexenc",
    "aiofiles",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/prappleizer/refsync"
Documentation = "https://github.com/prappleizer/refsync#readme"
Repository = "https://github.com/prappleizer/refsync"
Issues = "https://github.com/prappleizer/refsync/issues"

[project.scripts]
refsync = "refsync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refsync = [
    "frontend/templates/*.html",
    "frontend/static/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]